--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${HOST_NAME} '
             echo "Exporting environment variables"
-            echo "HOST_NAME: {$HOST_NAME}"
+            echo "HOST_NAME: ${HOST_NAME}"
             export PORT=$PORT
             export TOKEN_KEY=$TOKEN_KEY
-            export DB_CONN_STRING={$DB_CONN_STRING}
+            export DB_CONN_STRING=${DB_CONN_STRING}
             export DB_NAME=$DB_NAME
             export USERS_COLLECTION_NAME=$USERS_COLLECTION_NAME
             export MAIL_HOST=$MAIL_HOST
