--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Deploying application to EC2
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${HOST_NAME} '
+          ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${HOST_NAME} "
             echo "Exporting environment variables"
             echo "HOST_NAME: ${HOST_NAME}"
             export PORT=$PORT
@@ -37,4 +37,4 @@ jobs:
             export MAIL_USERNAME=$MAIL_USERNAME
             export MAIL_PASSWORD=$MAIL_PASSWORD
             bash /home/ubuntu/node-api/deploy/sync.sh
-          '
+          "
