--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
             echo "HOST_NAME: ${HOST_NAME}"
             export PORT=$PORT
             export TOKEN_KEY=$TOKEN_KEY
-            export DB_CONN_STRING=${DB_CONN_STRING}
+            export DB_CONN_STRING=$DB_CONN_STRING
             export DB_NAME=$DB_NAME
             export USERS_COLLECTION_NAME=$USERS_COLLECTION_NAME
             export MAIL_HOST=$MAIL_HOST
