--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,14 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${HOST_NAME} "
             # Create .env file and add environment variables
-            echo "PORT=$PORT" >> $TARGET/.env
+            echo "PORT=${{ secrets.PORT }}" >> $TARGET/.env
             echo "TOKEN_KEY=${{ secrets.TOKEN_KEY }}" >> $TARGET/.env
-            echo "DB_CONN_STRING=$DB_CONN_URI" >> $TARGET/.env
-            echo "DB_NAME=$DB_NAME" >> $TARGET/.env
-            echo "USERS_COLLECTION_NAME=$USERS_COLLECTION_NAME" >> $TARGET/.env
-            echo "MAIL_HOST=$MAIL_HOST" >> $TARGET/.env
-            echo "MAIL_USERNAME=$MAIL_USERNAME" >> $TARGET/.env
-            echo "MAIL_PASSWORD=$MAIL_PASSWORD" >> $TARGET/.env
+            echo "DB_CONN_STRING= ${{ secrets.DB_CONN_STRING }}" >> $TARGET/.env
+            echo "DB_NAME=${{ secrets.DB_NAME }}" >> $TARGET/.env
+            echo "USERS_COLLECTION_NAME=${{ secrets.USERS_COLLECTION_NAME }}" >> $TARGET/.env
+            echo "MAIL_HOST=${{ secrets.MAIL_HOST }}" >> $TARGET/.env
+            echo "MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}" >> $TARGET/.env
+            echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> $TARGET/.env
             
             # Confirm environment variables are set
             cat $TARGET/.env
