--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       TARGET: ${{ secrets.TARGET_DIR }}
       PORT: ${{ secrets.PORT }}
       TOKEN_KEY: ${{ secrets.TOKEN_KEY }}
-      DB_CONN_URI: ${{ secrets.DB_CONN_STRING }}
+      DB_CONN_STRING: ${{ secrets.DB_CONN_STRING }}
       DB_NAME: ${{ secrets.DB_NAME }}
       USERS_COLLECTION_NAME: ${{ secrets.USERS_COLLECTION_NAME }}
       MAIL_HOST: ${{ secrets.MAIL_HOST }}
@@ -27,9 +27,9 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${HOST_NAME} "
             # Create .env file and add environment variables
+            echo "DB_CONN_STRING=${{ secrets.DB_CONN_STRING }}" >> $TARGET/.env
             echo "PORT=${{ secrets.PORT }}" >> $TARGET/.env
             echo "TOKEN_KEY=${{ secrets.TOKEN_KEY }}" >> $TARGET/.env
-            echo "DB_CONN_STRING= ${{ secrets.DB_CONN_STRING }}" >> $TARGET/.env
             echo "DB_NAME=${{ secrets.DB_NAME }}" >> $TARGET/.env
             echo "USERS_COLLECTION_NAME=${{ secrets.USERS_COLLECTION_NAME }}" >> $TARGET/.env
             echo "MAIL_HOST=${{ secrets.MAIL_HOST }}" >> $TARGET/.env
