--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,14 +30,16 @@ jobs:
             touch $TARGET/.env
 
             # Write environment variables to .env file
-            echo "DB_CONN_STRING=${{ secrets.DB_CONN_STRING }}" >> $TARGET/.env
-            echo "PORT=${{ secrets.PORT }}" >> $TARGET/.env
-            echo "TOKEN_KEY=${{ secrets.TOKEN_KEY }}" >> $TARGET/.env
+            echo "PORT=$secrets.PORT" >> $TARGET/.env
+            echo "TOKEN_KEY=$secrets.TOKEN_KEY" >> $TARGET/.env
             echo "DB_NAME=${{ secrets.DB_NAME }}}" >> $TARGET/.env
             echo "USERS_COLLECTION_NAME=${{ secrets.USERS_COLLECTION_NAME }}" >> $TARGET/.env
             echo "MAIL_HOST=${{ secrets.MAIL_HOST }}" >> $TARGET/.env
             echo "MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}" >> $TARGET/.env
             echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> $TARGET/.env
+            echo "DB_CONN_STRING=${{ secrets.DB_CONN_STRING }}" >> $TARGET/.env
+            echo "DB_CONN_STRING=$secrets.DB_CONN_STRING" >> $TARGET/.env
+            echo "DB_CONN_STRING=$secrets.DB_CONN_STRING" > $TARGET/.env
             
             # Confirm environment variables are set
             cat $TARGET/.env
