--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             # Write environment variables to .env file
             echo "PORT=$secrets.PORT" >> $TARGET/.env
             echo "TOKEN_KEY=$secrets.TOKEN_KEY" >> $TARGET/.env
-            echo "DB_NAME=${{ secrets.DB_NAME }}}" >> $TARGET/.env
+            echo "DB_NAME=${{ secrets.DB_NAME }}" >> $TARGET/.env
             echo "USERS_COLLECTION_NAME=${{ secrets.USERS_COLLECTION_NAME }}" >> $TARGET/.env
             echo "MAIL_HOST=${{ secrets.MAIL_HOST }}" >> $TARGET/.env
             echo "MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}" >> $TARGET/.env
