--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,15 +32,15 @@ jobs:
             # Write environment variables to .env file
             echo \"DB_CONN_STRING=\${DB_CONN_STRING}\" >> $TARGET/.env
             echo "PORT=$PORT" >> $TARGET/.env
-            echo "TOKEN_KEY=$TOKEN_KEY" >> $TARGET/.env
-            echo "DB_NAME=$DB_NAME" >> $TARGET/.env
             echo "USERS_COLLECTION_NAME=$USERS_COLLECTION_NAME" >> $TARGET/.env
             echo "MAIL_HOST=$MAIL_HOST" >> $TARGET/.env
-            echo "MAIL_USERNAME=$secrets.MAIL_USERNAME" >> $TARGET/.env
-            echo "MAIL_PASSWORD=$secrets.MAIL_PASSWORD" >> $TARGET/.env
-            echo "DB_CONN_STRING=$secrets.DB_CONN_STRING" >> $TARGET/.env
-            echo "DB_CONN_STRING=$secrets.DB_CONN_STRING" >> $TARGET/.env
-            echo "DB_CONN_STRING=$secrets.DB_CONN_STRING" > $TARGET/.env
+            echo "MAIL_USERNAME=$MAIL_USERNAME" >> $TARGET/.env
+            echo "MAIL_PASSWORD=$MAIL_PASSWORD" >> $TARGET/.env
+            echo "DB_CONN_STRING=$DB_CONN_STRING" >> $TARGET/.env
+            echo "TOKEN_KEY=$TOKEN_KEY" >> $TARGET/.env
+            echo "DB_CONN_STRING=$DB_CONN_STRING" >> $TARGET/.env
+            echo "DB_NAME=$DB_NAME" >> $TARGET/.env
+            echo "DB_CONN_STRING=$DB_CONN_STRING" > $TARGET/.env
             
             # Confirm environment variables are set
             cat $TARGET/.env
