--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
             echo "TOKEN_KEY=$TOKEN_KEY" >> $TARGET/.env
             echo "DB_CONN_STRING=$DB_CONN_STRING" >> $TARGET/.env
             echo "DB_NAME=$DB_NAME" >> $TARGET/.env
-            echo "DB_CONN_STRING=$DB_CONN_STRING" > $TARGET/.env
+            echo "DB_CONN_STRING=$DB_CONN_STRING" >> $TARGET/.env
             
             # Confirm environment variables are set
             cat $TARGET/.env
