--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.6.1",
     "@types/nodemailer": "^6.4.16",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "concurrently": "^9.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
