--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,14 +18,6 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{secrets.EC2_SSH_KEY}}
-          HOST_NAME: ${{secrets.HOST_DNS}}
+          REMOTE_HOST: ${{secrets.HOST_DNS}}
           REMOTE_USER: ${{secrets.USERNAME}}
           TARGET: ${{secrets.TARGET_DIR}}
-          PORT: ${{secrets.PORT}}
-          TOKEN_KEY: ${{secrets.TOKEN_KEY}}
-          DB_CONN_STRING: ${{secrets.DB_CONN_STRING}}
-          DB_NAME: ${{secrets.DB_NAME}}
-          USERS_COLLECTION_NAME: ${{secrets.USERS_COLLECTION_NAME}}
-          MAIL_HOST: ${{secrets.MAIL_HOST}}
-          MAIL_USERNAME: ${{secrets.MAIL_USERNAME}}
-          MAIL_PASSWORD: ${{secrets.MAIL_PASSWORD}}
